--- a/cyndi.html
+++ b/cyndi.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">simple website creator</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
+<section class="engine"><a href="https://mobirise.info/p">web templates free download</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="7jRd50+VcqauiLYtVxqjOpRPJ7L9dTngH7TWLsMEjfZqM0j05Hz3wyviZ3tnTVhtGhkd5MOXtUMH6GDXG/manT4DuuE++yQehW+N35BhO/XJRZiFvaY8EPJLkgzOlYY6">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="EBNqtxAlM5O/hXNZ1C9a7Y9QKxR2l9y+ZnLqI6x0TgZTQfS16t8mkFjaXO8tsuk9PI400BRBVcGMWO5Wvsfw3sNVfK2wDVmEgSp7IB2/5AJ3rCgKHVv2PHdxIWXd41Jd">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
